--- a/pages/more_replenishment_points.html
+++ b/pages/more_replenishment_points.html
@@ -25,6 +25,35 @@
             </div>
         </div>
     </div>
+
+    <div class="maps-container">
+        <button class="maps-button" onclick="showMap('atm')"><img src="../icons/more-replenishment-points-atm-active-icon.svg" alt="ATM" class="maps-button-icon"><p>ATM</p></button>
+        <button class="maps-button" onclick="showMap('terminals')"><img src="../icons/more-replenishment-points-terminal-active-icon.svg" alt="Terminal" class="maps-button-icon"><p>Terminals</p></button>
+        <button class="maps-button" onclick="showMap('bank')"><img src="../icons/more-replenishment-points-bank-active-icon.svg" alt="Banks" class="maps-button-icon"><p>Banks</p></button>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="map" id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3108.824749988054!2d30.637309898228843!3d50.46384978827335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cf1382a1bdad%3A0xf0f8f91b332d722a!2z0J3QsNGG0LjQvtC90LDQu9GM0L3Ri9C5INGC0L7RgNCz0L7QstC-LdGN0LrQvtC90L7QvNC40YfQtdGB0LrQuNC5INGD0L3QuNCy0LXRgNGB0LjRgtC10YI!5e0!3m2!1sru!2sua!4v1710430925801!5m2!1sru!2sua" width="370" height="530" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="navbar">
+        <ul class="nav-list">
+            <li><a href="./main_bank.html"><img src="../icons/main-icon-not-active.svg" alt="Main" class="navbar-image"></a><a href="./main_bank.html" class="navbar-item-link-text">Main</a></li>
+            <li><a href=""><img src="../icons/security-icon-not-active.svg" alt="Security" class="navbar-image"></a><a href="" class="navbar-item-link-text">Security</a></li>
+            <li><a href="./deposit.html"><img src="../icons/deposit-icon-not-active.svg" alt="Deposit" class="navbar-image"></a><a href="./deposit.html" class="navbar-item-link-text">Deposit</a></li>
+            <li><a href=""><img src="../icons/installment-icon-not-active.svg" alt="Installment" class="navbar-image"></a><a href="" class="navbar-item-link-text">Installment</a></li>
+            <li><a href="./more.html"><img src="../icons/more-icon-active.svg" alt="More" class="navbar-image"></a><a href="./more.html" class="navbar-item-link-text-active">More</a></li>
+            <li><a href="./profile.html"><img src="../icons/user-not-logged-in.svg" alt="User" class="person-profile"></a></li>
+        </ul>
+    </div>
+
+
+    <script src="../js/more-replenishment_points.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
