started esim page

--- a/pages/more.html
+++ b/pages/more.html
@@ -170,7 +170,7 @@
                 </a>
             </li>
             <li>
-                <a href="" class="link-more-service">
+                <a href="./more_buy_esim.html" class="link-more-service">
                     <img src="../icons/more-buy-esim-icon.svg" alt="Esim" class="icon-more-service"><p>Buy eSIM</p>
                 </a>
             </li>
