added transfer pages

--- a/pages/more_buy_esim.html
+++ b/pages/more_buy_esim.html
@@ -31,7 +31,7 @@
                     <div class="line"></div>
                     <div class="local-tariff-buttons-container">
                         <button class="local-tariff-button">
-                            <a href="" class="local-tariff-link">
+                            <a href="./more_buy_esim_vodafone_choose_tariff.html" class="local-tariff-link">
 
                                 <div class="tariff-logo-div">
                                     <img src="../img/vodafone-logo.svg" alt="Vodafone" class="loacl-tariff-image">
@@ -41,7 +41,7 @@
                             </a>
                         </button>
                         <button class="local-tariff-button">
-                            <a href="" class="local-tariff-link">
+                            <a href="./more_buy_esim_lifecell_choose_tariff.html" class="local-tariff-link">
 
                                 <div class="tariff-logo-div">
                                     <img src="../img/lifecell-logo.svg" alt="Lifecell" class="loacl-tariff-image">
@@ -52,7 +52,7 @@
                             </a>
                         </button>
                         <button class="local-tariff-button">
-                            <a href="" class="local-tariff-link">
+                            <a href="./more_buy_esim_kyivstar_choose_tariff.html" class="local-tariff-link">
 
                                 <div class="tariff-logo-div">
                                     <img src="../img/kyivstar-logo.svg" alt="Kyivstar" class="loacl-tariff-image">
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="tariff-phone_num-info-div">
-                    <p class="tariff-name">Free Vodafone</p>
+                    <p class="tariff-name-my-esims">Free Vodafone</p>
                     <p class="phone-num">+38063000000</p>
                 </div>
             </div>
@@ -108,11 +108,11 @@
 
             <div class="tariff-benefits">
                 <div class="minutes">
-                    <img src="" alt="" class="minutes-icon">
+                    <img src="../icons/more-buy-esim-my-sims-tariff-minutes-icon.svg" alt="Minutes" class="minutes-icon">
                     <p class="minutes-benefit">1600 minutes on all Ukraine numbers</p>
                 </div>
                 <div class="internet">
-                    <img src="" alt="" class="internet-icon">
+                    <img src="../icons/more-buy-esim-my-sims-tariff-internet-icon.svg" alt="Internet" class="internet-icon">
                     <p class="internet-benefit">Unlimited Internet</p>
                 </div>
             </div>
@@ -130,11 +130,11 @@
 
                 </div>
 
-                <div class="internet-balance-text-container">
-                    <p class="user-internet-text">Minutes:</p>
+                <div class="minutes-balance-text-container">
+                    <p class="user-minutes-text">Minutes:</p>
 
-                    <div class="internet-balance-container">
-                        <p class="user-internet-balance">800</p>
+                    <div class="minutes-balance-container">
+                        <p class="user-minutes-balance">800</p>
                         <p class="minutes-text">min</p>
                     </div>
 
@@ -150,23 +150,26 @@
 
                 </div>
 
+                <div class="next_payment-time">
+                    <p class="text-next_payment">Next payment for tariff is on: </p>
+                    <div class="date-month">
+                        <p class="month">September</p>
+                        <p class="date">10</p>
+                    </div>
+
+                </div>
+
+                <div class="required-due">
+                    <p class="due-text">Due: </p>
+                    <div class="due-sum">
+                        <p class="user-due">2.34</p>
+                        <p class="dollars-text">$</p>
+                    </div>
+
+                </div>
+
             </div>
 
-            <div class="duration-next_payment-time">
-                <div class="duraion-of-transaction">
-                    <p>12</p>
-                    <p>months</p>
-                </div>
-                <div class="next_payment-time">
-                    <p class="text-next_payment">Next payment is on</p>
-                    <p class="date">10</p>
-                    <p class="month">September</p>
-                </div>
-            </div>
-            <div class="sum">
-                <p class="currency-sum">$</p>
-                <div class="amount">1000</div>
-            </div>
         </div>
     </div>
 
