--- a/pages/main_cashbacks.html
+++ b/pages/main_cashbacks.html
@@ -62,8 +62,11 @@
 
                 </div>
 
-                <input type="checkbox" name="category1" id="category1" value="groceries" checked="checked">
-                <span class="checkmark"></span>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="category1" id="category1" value="groceries" checked="checked">
+                    <span class="checkmark"></span>
+                 </label>
+
             </div>
 
             <div class="choice-container">
@@ -77,8 +80,11 @@
                     </div>
                 </div>
 
-                <input type="checkbox" name="category2" id="category2" value="pharmacy" checked="checked">
-                <span class="checkmark"></span>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="category2" id="category2" value="pharmacy" checked="checked">
+                    <span class="checkmark"></span>
+                </label>
+
             </div>
 
             <div class="choice-container">
@@ -92,8 +98,11 @@
                     </div>
                 </div>
 
-                <input type="checkbox" name="category3" id="category3" value="clothes" checked="checked">
-                <span class="checkmark"></span>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="category3" id="category3" value="clothes"  checked="checked">
+                    <span class="checkmark"></span>
+                </label>
+
 
             </div>
 
@@ -109,8 +118,10 @@
 
                 </div>
 
-                <input type="checkbox" name="category4" id="category4" value="games" checked="checked">
-                <span class="checkmark"></span>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="category4" id="category4" value="games" checked="checked">
+                    <span class="checkmark"></span>
+                </label>
 
             </div>
 
@@ -126,8 +137,10 @@
 
                 </div>
 
-                <input type="checkbox" name="category5" id="category5" value="taxi"checked="checked">
-                <span class="checkmark"></span>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="category5" id="category5" value="taxi" checked="checked">
+                    <span class="checkmark"></span>
+                </label>
 
             </div>
 
@@ -143,15 +156,17 @@
 
                 </div>
 
-                <input type="checkbox" name="category6" id="category6" value="pets" checked="checked">
-                <span class="checkmark"></span>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="category6" id="category6" value="pets" checked="checked">
+                    <span class="checkmark"></span>
+                </label>
 
             </div>
 
             <div class="choice-container">
 
                 <div class="choice-type">
-                    <img src="../icons/made-flowers-shopping-icon.svg" alt="Flowers" class="choice-pic">
+                    <img src="../icons/made-flowers-shopping-icon.svg" alt="Flowers" class="choice-pic" class="checkbox-not-active">
 
                     <div class="choice-name-percentage">
                         <p class="choice-name">Flowers</p>
@@ -159,21 +174,22 @@
                     </div>
 
                 </div>
-                <label class="form-control">
-                <input type="checkbox" name="category7" id="category7" value="flowers" checked="checked">
-                <span class="checkmark"></span>
+
+                <label class="checkbox-container">
+                    <input type="checkbox" name="category7" id="category7" value="flowers" checked="checked">
+                    <span class="checkmark"></span>
+                </label>
 
             </div>
 
+        </fieldset> 
+
+        <button type="submit">Confirm</button>
 
 
 
 
 
-
-
-
-         </fieldset> 
     </form>
 
     <div class="navbar">
@@ -186,7 +202,7 @@
             <li><a href="./profile.html"><img src="../icons/user-not-logged-in.svg" alt="User" class="person-profile"></a></li>
         </ul>
     </div>
-
+    <script src="../js/main_cashbacks.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
