created charity page

--- a/pages/main_bank.html
+++ b/pages/main_bank.html
@@ -75,7 +75,7 @@
                     <div class="btn-1"><a href="./main_statistics.html"><img src="../icons/statistics-icon.svg" alt="Statitics" class="menu-button"></a><a href="./main_statistics.html" class="menu-link-text"><p class="menu-link-p">Statistics</p></a></div>
                     <div class="btn-2"><a href="./main_cashbacks.html"><img src="../icons/cashbacks-icon.svg" alt="Cashbacks" class="menu-button"></a><a href="./main_cashbacks.html" class="menu-link-text"><p class="menu-link-p">Cashbacks</p></a></div>
                     <div class="btn-3"><a href="./main_transfer_to_card.html"><img src="../icons/transer-to-the-card-icon.svg" alt="Transfer to the card" class="menu-button"></a><a href="./main_transfer_to_card.html" class="menu-link-text"><p class="menu-link-p">Transfer to</p><p class="menu-link-p">the card</p></a></div>
-                    <div class="btn-4"><a href=""><img src="../icons/another-transaction-icon.svg" alt="Another Transaction" class="menu-button"></a><a href="" class="menu-link-text"><p class="menu-link-p">Another</p><p class="menu-link-p">Transaction</p></a></div>
+                    <div class="btn-4"><a href="./main_another_transaction.html"><img src="../icons/another-transaction-icon.svg" alt="Another Transaction" class="menu-button"></a><a href="./main_another_transaction.html" class="menu-link-text"><p class="menu-link-p">Another</p><p class="menu-link-p">Transaction</p></a></div>
                 </div>
             </div>
         </div>
