--- a/pages/main_cashbacks.html
+++ b/pages/main_cashbacks.html
@@ -184,7 +184,7 @@
 
         </fieldset> 
 
-        <button type="submit">Confirm</button>
+        <button type="submit" class="btn-confirm" onclick="AlertMessage()">Confirm</button>
 
 
 
