--- a/pages/main_statistics.html
+++ b/pages/main_statistics.html
@@ -20,7 +20,7 @@
             <div class="col-12">
                 <div class="statistics-title-div">
                     <a href="./main_bank.html"><img src="../icons/arrow-back-white.svg" alt="Back" class="main-back"></a>
-                    <h1 class="statistics_to_the_card-title">Statistics</h1>
+                    <h1 class="statistics-title">Statistics</h1>
                 </div>
             </div>
 
