created few pages about fines

--- a/pages/main_another_transaction_traffic_violations_payment.html
+++ b/pages/main_another_transaction_traffic_violations_payment.html
@@ -11,48 +11,48 @@
     <link rel="apple-touch-icon" sizes="167x167" href="../icons/167.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/main_another_transaction.css">
-    <title>MuradBank - Another Transaction</title>
+    <link rel="stylesheet" href="../css/main_another_transaction_traffic_violations_payment.css">
+    <title>MuradBank - Fines for traffic violations payment</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="another_transaction-title-div">
-                    <a href="./main_bank.html"><img src="../icons/arrow-back-white.svg" alt="Back" class="main-back"></a>
-                    <h1 class="another_transaction-title">Another transaction</h1>
+                <div class="fine_violations-title-div">
+                    <a href="./main_another_transaction.html"><img src="../icons/arrow-back-white.svg" alt="Back" class="main-back"></a>
+                    <h1 class="fine_violations-title">Fines for traffic violations</h1>
                 </div>
             </div>
+
+            <div class="col-12">
+                <div class="fine-container">
+
+                    <div class="resolution-title-number">
+                        <h2>Resolution</h2>
+                        <h2>XXX1234</h2>
+                    </div>
+
+                    <div class="type-of-fine-container">
+                        <h3 class="type-of-fine-title">Type:</h3>
+                        <p class="type-of-fine-text">Speed violation</p>
+                    </div>
+
+                    <div class="due-main-container">
+                        <h3 class="due-title">Due:</h3>
+                        <div class="due-container">
+                            <p>120.34</p>
+                            <p>$</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-12">
+                <form action="" class="pay-btn-form">
+                    <button class="pay-btn">Pay</button>
+                </form>
+            </div>
         </div>
-    </div>
-
-
-    <div class="list-container">
-        <div class="decoration-line"></div>
-        <ul class="another-transaction">
-            <li>
-                <a href="./main_another_transaction_repleniment_of_mobile.html" class="link-another-transaction">
-                    <img src="../icons/main-another-transaction-replenishment-of mobile-icon.svg" alt="Replenishment of mobile" class="icon-another-transaction"><p>Replenishment of mobile</p>
-                </a>
-            </li>
-            <li>
-                <a href="./main_another_transaction_traffic_voilations.html" class="link-another-transaction">
-                    <img src="../icons/main-another-transaction-fines-for-traffic-violations-icon.svg" alt="Fines" class="icon-another-transaction"><p>Fines for traffic violations</p>
-                </a>
-            </li>
-
-            <li>
-                <a href="./main_charity.html" class="link-another-transaction">
-                    <img src="../icons/main-another-transaction-charity-icon.svg" alt="Charity" class="icon-another-transaction"><p>Charity</p>
-                </a>
-            </li>
-
-            <li>
-                <a href="./main_iban_payment.html" class="link-another-transaction">
-                    <img src="../icons/main-another-transaction-iban-payment-icon.svg" alt="IBAN" class="icon-another-transaction"><p>IBAN Payment</p>
-                </a>
-            </li>
-        </ul>
     </div>
 
     <div class="navbar">
@@ -67,5 +67,6 @@
     </div>
 
     <script src="../js/bootstrap.bundle.min.js"></script> 
+
 </body>
 </html>
