payment operation done successfully

--- a/pages/main_another_transaction_traffic_violations_payment_operation_done_successfully.html
+++ b/pages/main_another_transaction_traffic_violations_payment_operation_done_successfully.html
@@ -11,8 +11,8 @@
     <link rel="apple-touch-icon" sizes="167x167" href="../icons/167.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/main_another_transaction_traffic_violations_payment.css">
-    <title>MuradBank - Fines for traffic violations payment</title>
+    <link rel="stylesheet" href="../css/main_another_transaction_traffic_violations_payment_operation_done_successfully.css">
+    <title>MuradBank - Fines for traffic violations payment done successfully</title>
 </head>
 <body>
     <div class="container">
@@ -23,38 +23,18 @@
                     <h1 class="fine_violations-title">Fines for traffic violations</h1>
                 </div>
             </div>
-
             <div class="col-12">
-                <div class="fine-container">
-
-                    <div class="resolution-title-number">
-                        <h2>Resolution</h2>
-                        <h2>XXX1234</h2>
-                    </div>
-
-                    <div class="type-of-fine-container">
-                        <h3 class="type-of-fine-title">Type:</h3>
-                        <p class="type-of-fine-text">Speed violation</p>
-                    </div>
-
-                    <div class="due-main-container">
-                        <h3 class="due-title">Due:</h3>
-                        <div class="due-container">
-                            <p>120.34</p>
-                            <p>$</p>
-                        </div>
+                <div class="successfull-operation-div">
+                    <p class="successfull-operation-message">Operation was done <br>
+                    successfully</p>
+                    <div class="container-for-video-successfil-operation">
+                        <img class="successfull-operation-video" src="../icons/operation-done-successfull-animation.gif" alt="Done">
                     </div>
 
                 </div>
             </div>
-            <div class="col-12">
-                <form action="./main_another_transaction_traffic_violations_payment_operation_done_successfully.html" class="pay-btn-form">
-                    <button class="pay-btn">Pay</button>
-                </form>
-            </div>
         </div>
     </div>
-
     <div class="navbar">
         <ul class="nav-list">
             <li><a href="./main_bank.html"><img src="../icons/main-icon-active.svg" alt="Main" class="navbar-image"></a><a href="./main_bank.html" class="navbar-item-link-text-active">Main</a></li>
@@ -67,6 +47,5 @@
     </div>
 
     <script src="../js/bootstrap.bundle.min.js"></script> 
-
 </body>
 </html>
