--- a/pages/main_iban_payment.html
+++ b/pages/main_iban_payment.html
@@ -59,9 +59,9 @@
     <div class="navbar">
         <ul class="nav-list">
             <li><a href="./main_bank.html"><img src="../icons/main-icon-active.svg" alt="Main" class="navbar-image"></a><a href="./main_bank.html" class="navbar-item-link-text-active">Main</a></li>
-            <li><a href=""><img src="../icons/security-icon-not-active.svg" alt="Security" class="navbar-image"></a><a href="" class="navbar-item-link-text">Security</a></li>
+            <li><a href="./security.html"><img src="../icons/security-icon-not-active.svg" alt="Security" class="navbar-image"></a><a href="./security.html" class="navbar-item-link-text">Security</a></li>
             <li><a href="./deposit.html"><img src="../icons/deposit-icon-not-active.svg" alt="Deposit" class="navbar-image"></a><a href="./deposit.html" class="navbar-item-link-text">Deposit</a></li>
-            <li><a href=""><img src="../icons/installment-icon-not-active.svg" alt="Installment" class="navbar-image"></a><a href="" class="navbar-item-link-text">Installment</a></li>
+            <li><a href="./installment.html"><img src="../icons/installment-icon-not-active.svg" alt="Installment" class="navbar-image"></a><a href="./installment.html" class="navbar-item-link-text">Installment</a></li>
             <li><a href="./more.html"><img src="../icons/more-icon-not-active.svg" alt="More" class="navbar-image"></a><a href="./more.html" class="navbar-item-link-text">More</a></li>
             <li><a href="./profile.html"><img src="../icons/user-not-logged-in.svg" alt="User" class="person-profile"></a></li>
         </ul>
