--- a/pages/security.html
+++ b/pages/security.html
@@ -11,19 +11,52 @@
     <link rel="apple-touch-icon" sizes="167x167" href="../icons/167.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/main_another_transaction_traffic_violations_payment.css">
-    <title>MuradBank - Security/title>
+    <link rel="stylesheet" href="../css/security.css">
+    <title>MuradBank - Security</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="security-title-div">
-                    <a href="./main_another_transaction.html"><img src="../icons/arrow-back-white.svg" alt="Back" class="main-back"></a>
                     <h1 class="security-title">Security</h1>
                 </div>
             </div>
         </div>
     </div>
+    <div class="list-container">
+        <div class="decoration-line"></div>
+        <ul class="security-options">
+            <li>
+                <a href="./" class="link-security-option">
+                    <img src="../icons/security-change-pin-code-icon.svg" alt="Icon" class="icon-security"><p>Change PIN-code</p>
+                </a>
+            </li>
+            <li>
+                <a href="./security_blocked_card.html" class="link-security-option">
+                    <img src="../icons/security-block-the-card-icon.svg" alt="Icon" class="icon-security"><p>Block the card</p>
+                </a>
+            </li>
+
+            <li>
+                <a href="./security_reissue_card.html" class="link-security-option">
+                    <img src="../icons/security-reissue-the-card.svg" alt="Icon" class="icon-security"><p>Reissue the card</p>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="navbar">
+        <ul class="nav-list">
+            <li><a href="./main_bank.html"><img src="../icons/main-icon-not-active.svg" alt="Main" class="navbar-image"></a><a href="./main_bank.html" class="navbar-item-link-text">Main</a></li>
+            <li><a href="./security.html"><img src="../icons/security-icon-active.svg" alt="Security" class="navbar-image"></a><a href="./security.html" class="navbar-item-link-text-active">Security</a></li>
+            <li><a href="./deposit.html"><img src="../icons/deposit-icon-not-active.svg" alt="Deposit" class="navbar-image"></a><a href="./deposit.html" class="navbar-item-link-text">Deposit</a></li>
+            <li><a href="./installment.html"><img src="../icons/installment-icon-not-active.svg" alt="Installment" class="navbar-image"></a><a href="./installment.html" class="navbar-item-link-text">Installment</a></li>
+            <li><a href="./more.html"><img src="../icons/more-icon-not-active.svg" alt="More" class="navbar-image"></a><a href="./more.html" class="navbar-item-link-text">More</a></li>
+            <li><a href="./profile.html"><img src="../icons/user-not-logged-in.svg" alt="User" class="person-profile"></a></li>
+        </ul>
+    </div>
+
+    <script src="../js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
