done reissuing pages

--- a/pages/security_reissue_card.html
+++ b/pages/security_reissue_card.html
@@ -75,7 +75,7 @@
                     you will pay it in the nearest bank</p>
             </li>
         </ul>
-        <form action="" class="reissue-form">
+        <form action="./security_reissuing_done_successfully.html" class="reissue-form">
             <button class="reissue-btn">Reisssue</button>
         </form>
     </div>
