--- a/welcome.html
+++ b/welcome.html
@@ -20,6 +20,13 @@
     <img src="./img/bottom-decoration-circles.svg" class="bottom-decoration-circles" alt="Bottom decor">
     <div class="elements-of-control">
         <img src="./img/logo.svg" class="logo-welcome" alt="Logo">
+        <form action="./pages/type_password.html" class="log-in">
+            <p class="login-text">Already have an account?</p>
+            <input type="email" placeholder="Email" class="email-input" required>
+            <input type="password" placeholder="Passsword" class="password-input" required>
+            <button class="login-btn">Log in</button>
+        </form>
+        <p class="sign-up-text">Or</p>
         <a href="./pages/register.html" class="welcome-create-account-button">Create account</a>
     </div>
     <script src="./js/bootstrap.bundle.min.js"></script> 
