enter new pin page

--- a/pages/card_blocked_no_operations_avilable.html
+++ b/pages/card_blocked_no_operations_avilable.html
@@ -40,7 +40,7 @@
                         </button>
                     </form>
     
-                    <form action="" class="reissue-the-card-form">
+                    <form action="./security_reissue_blocked_card.html" class="reissue-the-card-form">
                         <button class="reisue-the-card-btn">
                             <img src="../icons/security-reissue-the-card.svg" alt="Icon" class="reissue-the-card-icon">
                             <p class="reissue-the-card-text">Reissue the card</p>
