--- a/pages/security.html
+++ b/pages/security.html
@@ -28,7 +28,7 @@
         <div class="decoration-line"></div>
         <ul class="security-options">
             <li>
-                <a href="./" class="link-security-option">
+                <a href="./security_enter_new_pin.html" class="link-security-option">
                     <img src="../icons/security-change-pin-code-icon.svg" alt="Icon" class="icon-security"><p>Change PIN-code</p>
                 </a>
             </li>
