--- a/pages/security_enter_new_pin_card_blocked.html
+++ b/pages/security_enter_new_pin_card_blocked.html
@@ -11,47 +11,46 @@
     <link rel="apple-touch-icon" sizes="167x167" href="../icons/167.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/security_blocked_card.css">
-    <title>MuradBank - Security</title>
+    <link rel="stylesheet" href="../css/security_enter_new_pin.css">
+    <title>MuradBank - Enter New Pin</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="security-title-div">
-                    <h1 class="security-title">Security</h1>
+                <div class="new_pin-title-div">
+                    <a href="./security.html"><img src="../icons/arrow-back-white.svg" alt="Back" class="security-back"></a>
+                    <h1 class="new_pin-title">New PIN-Code</h1>
                 </div>
-            </div>
-            <div class="col-12 blocked-card-message-col">
-                <div class="blocked-card-message-container">
-                    <img src="../icons/security-card-blocked-message-icon.svg" alt="Lock" class="blocked-card-icon">
-                    <p class="card-blocked-message">Card has been blocked successfully</p>
+                <div class="all-elements">
+                    <img src="../icons/user-not-logged-in.svg" class="user-profile-pic" alt="User Profile Pic">
+                    <h1>Hello, User</h1>
+                    <p class="enter-pin-text">Enter new PIN-Code</p>
+                    <div class="circles">
+                        <div class="circle circle-1" id="circle-1"></div>
+                        <div class="circle circle-2" id="circle-2"></div>
+                        <div class="circle circle-3" id="circle-3"></div>
+                        <div class="circle circle-4" id="circle-4"></div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn btn-1" onclick="handleButtonClick(1)">1</div>
+                        <div class="btn btn-2" onclick="handleButtonClick(2)">2</div>
+                        <div class="btn btn-3" onclick="handleButtonClick(3)">3</div>
+                        <div class="btn btn-4" onclick="handleButtonClick(4)">4</div>
+                        <div class="btn btn-5" onclick="handleButtonClick(5)">5</div>
+                        <div class="btn btn-6" onclick="handleButtonClick(6)">6</div>
+                        <div class="btn btn-7" onclick="handleButtonClick(7)">7</div>
+                        <div class="btn btn-8" onclick="handleButtonClick(8)">8</div>
+                        <div class="btn btn-9" onclick="handleButtonClick(9)">9</div>
+                        <div class="btn-none">.</div>
+                        <div class="btn btn-0" onclick="handleButtonClick(0)">0</div>
+                        <img src="../icons/earse.svg" class="clear" onclick="passWordClear()" alt="Clear">
+                        
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="list-container">
-        <div class="decoration-line"></div>
-        <ul class="security-options">
-            <li>
-                <a href="./security_enter_new_pin_card_blocked.html" class="link-security-option">
-                    <img src="../icons/security-change-pin-code-icon.svg" alt="Icon" class="icon-security"><p>Change PIN-code</p>
-                </a>
-            </li>
-            <li>
-                <a href="./security.html" class="link-security-option">
-                    <img src="../icons/security-block-the-card-icon.svg" alt="Icon" class="icon-security"><p>Unblock the card</p>
-                </a>
-            </li>
-
-            <li>
-                <a href="./security_reissue_blocked_card.html" class="link-security-option">
-                    <img src="../icons/security-reissue-the-card.svg" alt="Icon" class="icon-security"><p>Reissue the card</p>
-                </a>
-            </li>
-        </ul>
-    </div>
-
     <div class="navbar">
         <ul class="nav-list">
             <li><a href="./main_bank_card_blocked.html"><img src="../icons/main-icon-not-active.svg" alt="Main" class="navbar-image"></a><a href="./main_bank_card_blocked.html" class="navbar-item-link-text">Main</a></li>
@@ -63,6 +62,7 @@
         </ul>
     </div>
 
+    <script src="../js/security_enter_new_pin.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
