--- a/pages/installment_cash_loan_operation_done_successfully.html
+++ b/pages/installment_cash_loan_operation_done_successfully.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="3;url=./installment_cash_loan_blank_document.html">
     <link rel="manifest" href="../js/manifest.webmanifest">
     <link rel="shortcut icon" href="../icons/website-icon.svg" type="image/x-icon">
     <link rel="apple-touch-icon" href="../icons/icon.png">
@@ -11,50 +12,30 @@
     <link rel="apple-touch-icon" sizes="167x167" href="../icons/167.png">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/installment.css">
-    <title>MuradBank - Installment</title>
+    <link rel="stylesheet" href="../css/installment_plan_operation_done_successfully.css">
+    <title>MuradBank - Installment Cash Loan done successfully</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="installment-title">Installment</h1>
+                <div class="installment-title-div">
+                    <a href="./installment.html"><img src="../icons/arrow-back-white.svg" alt="Back" class="installment-back"></a>
+                    <h1 class="installment-title">Installment Cash Loan</h1>
+                </div>
             </div>
             <div class="col-12">
-                <div class="user-limit-text-container">
-                    <h2 class="text-title">Your limit is</h2>
-                    <div class="user-limit">
-                        <p>12000</p>
-                        <p>$</p>
+                <div class="successfull-operation-div">
+                    <p class="successfull-operation-message">Operation was done <br>
+                    successfully</p>
+                    <div class="container-for-video-successfil-operation">
+                        <img class="successfull-operation-video" src="../icons/operation-done-successfull-animation.gif" alt="Done">
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="list-container">
-        <div class="decoration-line"></div>
-        <ul class="installment-options">
-            <li>
-                <a href="./installment_plan.html" class="link-installment-options">
-                    <img src="../icons/intsallment-installment-plan.svg" alt="Icon" class="icon-installment-options"><p>Installment plan</p>
-                </a>
-            </li>
-            <li>
-                <a href="./installment_buying_in_parts.html" class="link-installment-options">
-                    <img src="../icons/installment-installment-buying-in-parts.svg" alt="Icons" class="icon-installment-options"><p>Buying in parts</p>
-                </a>
-            </li>
-
-            <li>
-                <a href="./installment_cash_loan.html" class="link-installment-options">
-                    <img src="../icons/installment-cash-loan.svg" alt="Icons" class="icon-installment-options"><p>Cash loan</p>
-                </a>
-            </li>
-
-        </ul>
-    </div>
-
     <div class="navbar">
         <ul class="nav-list">
             <li><a href="./main_bank.html"><img src="../icons/main-icon-not-active.svg" alt="Main" class="navbar-image"></a><a href="./main_bank.html" class="navbar-item-link-text">Main</a></li>
