--- a/pages/main_another_transaction_traffic_voilations.html
+++ b/pages/main_another_transaction_traffic_voilations.html
@@ -26,8 +26,8 @@
             <div class="col-12">
                 <form action="./main_another_transaction_traffic_violations_payment.html" class="form">
                     <h1 class="enter-the-series-title">Enter the number and resolution series</h1>
-                    <input type="text" placeholder="XXX1234" class="series-number-input">
-                    <button class="btn-next">Next</button>
+                    <input type="text" placeholder="XXX1234" class="series-number-input" required="true">
+                    <button type="submit" class="btn-next">Next</button>
                 </form>
             </div>
         </div>
