--- a/pages/main_charity_select_amount.html
+++ b/pages/main_charity_select_amount.html
@@ -29,7 +29,7 @@
                     <label for="" class="select-the-amount-label">Select the amount</label>
                     <div class="another-elements-container">
                         <div class="amount-container">
-                            <input type="number" placeholder="23.05" class="amount-input">
+                            <input type="number" placeholder="23.05" class="amount-input" required="true">
                             <p class="dollar-text">$</p>
                         </div>
     
