--- a/pages/main_iban_payment.html
+++ b/pages/main_iban_payment.html
@@ -28,18 +28,18 @@
 
                     <div class="enter-iban-container">
                         <label for="" class="enter-iban-label">Enter the IBAN</label>
-                        <input type="text" placeholder="UA000000000000" class="enter-iban-input">
+                        <input type="text" placeholder="UA000000000000" class="enter-iban-input" required="true">
                     </div>
 
                     <div class="enter-name-surname-container">
                         <label for="" class="enter-name-surname-label">Enter name and surname</label>
-                        <input type="text" placeholder="John Smith" class="enter-name-surname-input">
+                        <input type="text" placeholder="John Smith" class="enter-name-surname-input" required="true">
                     </div>
 
                     <div class="enter-sum-container">
                         <label for="" class="enter-sum-label">Enter sum</label>
                         <div class="enter-sum-input-container">
-                            <input type="number" placeholder="234.08" class="enter-sum-input">
+                            <input type="number" placeholder="234.08" class="enter-sum-input" required="true">
                             <p class="dollar-text">$</p>
                         </div>
 
