--- a/pages/main_transfer_to_card.html
+++ b/pages/main_transfer_to_card.html
@@ -35,7 +35,7 @@
 
                     <label for="" class="enter-sum-label">Enter sum</label>
                     <div class="sum-container">
-                        <input type="number" placeholder="23.05" class="sum-input">
+                        <input type="number" placeholder="23.05" class="sum-input" required="true">
                         <p class="dollar-text">$</p>
                     </div>
 
