--- a/pages/installment_plan.html
+++ b/pages/installment_plan.html
@@ -28,7 +28,7 @@
 
                     <label for="" class="select-amount-label">Select the amount</label>
                     <div class="sum-container">
-                        <input type="number" placeholder="1000.05" class="sum-input" id="installmentSumInput">
+                        <input type="number" placeholder="1000.05" class="sum-input" id="installmentSumInput" required="true">
                         <p class="dollar-text">$</p>
                     </div>
 
